# ChangeLog for net-misc/urlview
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/urlview/ChangeLog,v 1.22 2008/02/03 15:43:44 grobian Exp $

  03 Feb 2008; Fabian Groffen <grobian@gentoo.org> urlview-0.9.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  12 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/urlview-0.9-DESTDIR.patch, urlview-0.9.ebuild:
  Make this ebuild not completely suck at life and add some more KEYWORDS
  #143380.

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> urlview-0.9.ebuild:
  Mark 0.9 stable on ia64

  09 Aug 2006; Fabian Groffen <grobian@gentoo.org> urlview-0.9.ebuild:
  Marked ~ppc-macos (bug #143380)

  18 Oct 2005; Aron Griffis <agriffis@gentoo.org> urlview-0.9.ebuild:
  Mark 0.9 stable on amd64

  26 Feb 2005; Simon Stelling <blubb@gentoo.org> +files/include-fix.patch,
  urlview-0.9.ebuild:
  added Bernhard Ager's patch to fix bug 70254 and ~amd64

  06 Feb 2005; Markus Rothe <corsair@gentoo.org> urlview-0.9.ebuild:
  Stable on ppc64

  15 Dec 2004; Markus Rothe <corsair@gentoo.org> urlview-0.9.ebuild:
  Added ~ppc64 to KEYWORDS; bug #74231

  04 Sep 2004; Tom Martin <slarti@gentoo.org> urlview-0.9.ebuild:
  Added einfo with regard to bug 42907.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> urlview-0.9.ebuild:
  Add inherit eutils

  16 Apr 2004; Michael McCabe <randy@gentoo.org> urlview-0.9.ebuild:
  adding s390 keywords

  19 Oct 2003; Markus Nigbur <pyrania@gentoo.org> urlview-0.9.ebuild:
  Added newline fix. Thanks to James Harlow (#25101).

  22 May 2003; Aron Griffis <agriffis@gentoo.org> urlview-0.9.ebuild:
  Mark stable on alpha

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*urlview-0.9 (1 Feb 2002)
  
  26 Jul 2002; Calum Selkirk <cselkirk@gentoo.org> urlview-0.9.ebuild :
  Added ppc to Keywords.
  Added RDEPEND
