@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX include-fix.patch 238 RMD160 4545d690edfe756e8f8a90e15dc82cf7fea873ba SHA1 d26bba9862b0117133bb918ed84f343a46017ff9 SHA256 d49ebf03c879e2d2bcd360fb8813633870cf1fd68fac31a13bfa239dd7d9bffb
 AUX no-trailing-newline.patch 527 RMD160 c85d1e4566ec4f8c0e2c489bbc0ab7760d6dc684 SHA1 a077435c384cc420d241ceef1b0aad8fa1fee699 SHA256 f4b6eb096d5fd0677497de6c2fd12c6b08f84a5a047976345d3cda0d0becba30
 AUX urlview-0.9-DESTDIR.patch 299 RMD160 d4357f8976c0522bd0176615c4b6344c0a617e3a SHA1 3f8c594fe82d8b9c21b7ddfc98cdea612777faff SHA256 c2ba289ad10354dd9c67f1914c5dd9adbc1f207954c4d43f15c2016e797f876d
 AUX urlview-0.9-prefix.patch 1538 RMD160 3cd06745d7e2749420dd9bc64e982f3a2f1b7ce2 SHA1 50e8b2f203540d59fded81a72c1d43e2cb56c08e SHA256 f160b7c184b5cafa02155d62adbd96aacc4a46f49047ab41f105484eeef758cf
 DIST urlview-0.9.tar.gz 46685 RMD160 eafefdc7f1fe06f3f45a3f2a694c42dd833a178e SHA1 e366312a7dd04eb38909a36f854c502fbe81f4be SHA256 74d18026e84e3cd70a3fdd1a7247a68031b0c1c1c6d761d64b7063ff71091cc3
 EBUILD urlview-0.9.ebuild 1197 RMD160 7067dc0959638951d344d52c1efdd5c4f3e8461b SHA1 b946b0634ff4708ccdfef7943a25a7fe9fb7f4c9 SHA256 0961fdba2f7ebdb9fa0e555dad94fe36e17e5a762d561372b2c9489fe9b0c54e
-MISC ChangeLog 2638 RMD160 12feb7ede188cf87f4b408df635b55081a3179e1 SHA1 77ae7bdef4314f6b8908ab67ab93ac32bc067732 SHA256 f1434af7df125493ce61d61cd0d0561e3744483a518480ab23a767f39bd960bc
-MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
+MISC ChangeLog 2729 RMD160 ee16c709b41648752036993847332524124a24cb SHA1 7f0f0aa8989760de4bdcb2416941470aed48428e SHA256 434f91618ab04b6aa04cc4efb3dd38e12614259a7992c3d870d1e0a44e35a0ac
+MISC metadata.xml 720 RMD160 49c047d7460baab252783ed5fd60b201ea02c245 SHA1 4ec2ee8d96c99bada5b7c1c918026bf99f39e95b SHA256 c60999fea29cd2b63545986afe24e6b7e4378cb5f43f2e81aaca4f4f9ec3319a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk/ArSsACgkQX3X2B8XHTonW7QCePzDr7S6n2aJ0BlzYgMEj6eiu
+kvYAnjYRve7PBqNXs0SFt0/fCp0mhGe1
+=SD9P
+-----END PGP SIGNATURE-----
